data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_252.wast
;; 3. **Test Description**: Design a loop where the `nop` instruction precedes a `br_if` that conditionally branches based on a modified stack value. Confirm the loop exits when expected.    - **Constraint**: Ensures that `nop` does not alter stack state or the following instruction's behavior.    - **Relation to Infinite Loops**: Prevents erroneous infinite loops caused by `nop` interfering with stack-based conditions.

(assert_invalid
  (module
    (func (loop 
            nop
            (i32.const 0)
            br_if 0)))
  "invalid type")